--- a/ui/html/home.html
+++ b/ui/html/home.html
@@ -1,6 +1,6 @@
 {{ define "title" }}Home{{ end }}
 
 {{ define "main" }}
-	<h2>4pw</h2>
-	<p>There's nothing to see here yet!</p>
+	<h2>Dom</h2>
+	<p>Witamy w naszej kwiaciarni!</p>
 {{ end }}
