--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -11,14 +11,14 @@
 	</head>
 	<body>
 		<header>
-			<div class="logo"></div>
+			<logo></logo>
 			<h1><a href='/'>Cztery Pory Wianków</a></h1>
 		</header>
 		{{ template "nav" . }}
 		<main>
 			{{ template "main" . }}
 		</main>
-		<footer>Powered by <a href='https://golang.org/'>Go</a></footer>
+		<footer>Powered by <a href='https://golang.org/'>Go</a> in {{ .CurrentYear }}</footer>
 		<script src='/static/main.js' type='text/javascript'></script>
 	</body>
 </html>
